links to project

--- a/index.html
+++ b/index.html
@@ -9,5 +9,22 @@
 
 <body>
     <h1>Ashlen's GitHub Page</h1>
+
+    <div>
+        <p>Week 5 Trivia Game Homework</p>
+        <a href="https://ashlenbruns.github.io/Trivia-Game" target="_blank">Churchill Trivia</a>
+    </div>
+    <br>
+    <div>
+        <p>Week 4 jQuery Homework</p>
+        <a href="https://ashlenbruns.github.io/unit-4-game" target="_blank">Tree Hugger Game</a>
+    </div>
+    <br>
+    <div>
+        <p>Week 3 Javascript Homework</p>
+        <a href="https://ashlenbruns.github.io/Psychic-Game" target="_blank">Psychic Game</a>
+    </div>
+    <div>
+    
 </body>
 </html>
