--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <h1>Ashlen's GitHub Page</h1>
 
     <div>
+        <p>Week 6 Ajax Homework</p>
+        <a href="https://ashlenbruns.github.io/Giftastic" target="_blank">The Gif-tastic World of Sports!</a>
+    </div>
+    <br>
+    <div>
         <p>Week 5 Trivia Game Homework</p>
         <a href="https://ashlenbruns.github.io/Trivia-Game" target="_blank">Churchill Trivia</a>
     </div>
