--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
     <h1>Ashlen's GitHub Page</h1>
 
     <div>
+        <p>Week 7 Firebase Homework</p>
+        <a href="https://ashlenbruns.github.io/Train-Scheduler" target="_blank">A Train to Nowhere</a>
+    </div>
+    <br>
+
+    <div>
         <p>Week 6 Ajax Homework</p>
         <a href="https://ashlenbruns.github.io/Giftastic" target="_blank">The Gif-tastic World of Sports!</a>
     </div>
