--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
     <h1>Ashlen's GitHub Page</h1>
 
     <div>
+        <p>Week 10 Node Homework</p>
+        <a href="https://ashlenbruns.github.io/liri-node-app" target="_blank">Liri</a>
+    </div>
+    <br>
+
+    <div>
         <p>Week 8 Group Project</p>
         <a href="https://ashlenbruns.github.io/Group-Project-1" target="_blank">Date Night</a>
     </div>
@@ -42,6 +48,9 @@
         <a href="https://ashlenbruns.github.io/Psychic-Game" target="_blank">Psychic Game</a>
     </div>
     <div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script type="text/javascript" src="java.js"></script>
     
 </body>
 </html>
