--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <div>
         <p>Week 10 Node Homework</p>
-        <a href="https://ashlenbruns.github.io/liri-node-app" target="_blank">Liri</a>
+        <a href="https://github.com/ashlenbruns/liri-node-app.git" target="_blank">Liri</a>
     </div>
     <br>
 
