--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
     <h1>Ashlen's GitHub Page</h1>
 
     <div>
+        <p>Week 12 MySQL Homework</p>
+        <a href="https://github.com/ashlenbruns/bamazon.git" target="_blank">bamazon!</a>
+    </div>
+    <br>
+    
+    <div>
         <p>Week 10 Node Homework</p>
         <a href="https://github.com/ashlenbruns/liri-node-app.git" target="_blank">Liri</a>
     </div>
