--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
     <h1>Ashlen's GitHub Page</h1>
 
     <div>
+        <p>Week 13 Node and Express Homework</p>
+        <a href="https://sheltered-reef-59671.herokuapp.com/" target="_blank">Friend Finder</a>
+    </div>
+    <br>
+
+    <div>
         <p>Week 12 MySQL Homework</p>
         <a href="https://github.com/ashlenbruns/bamazon.git" target="_blank">bamazon!</a>
     </div>
