--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <p>If I could, I would forever be a student.  After 11 years in various customer service positions, I have finally discovered a career path that allows me to be the “forever student” – coding!  Having graduated with a degree in Studio Art and English, I have always gravitated toward combining the technical with the creative.  Coding is the perfect balance of this – the languages are strict, but the applications are endless if you have the imagination to drive them forward.  I am currently enrolled in the University of Minnesota Full-Stack Web Development Boot Camp.  The pace is fast and there is always something new to learn, but I love the challenge and find great satisfaction in creating clean, working code.</p>
         <br>
         <h4>Fun Stuff</h4>
-        <p>My husband and I are avid hikers, National Park enthusiasts and we love our dogs, Winston and Clementine.</p>
+        <p>My husband and I are avid hikers, national park enthusiasts and we love our dogs, Winston and Clementine.</p>
       </div>
     </div>
     </div>
