--- a/index.html
+++ b/index.html
@@ -58,6 +58,17 @@
         <div class="row">
           <div class="thumbnail col-12 col-sm-6 col-md-6 col-lg-4">
             <div class="hovereffect">
+              <img class="img-fluid" src="assets/images/proj2.png" alt="Project-2">
+              <div class="overlay">
+                <h4>Choose Your Own Adventure</h4>
+                <p class="mx-auto">node | express | express-validate | mySQL | sequelize | bcrypt | gauge.js | javascript | jQuery | Bootstrap</p>
+                <a class="info" href="https://cyoa-bc.herokuapp.com/" target="_blank">View Project</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="thumbnail col-12 col-sm-6 col-md-6 col-lg-4">
+            <div class="hovereffect">
               <img class="img-fluid" src="assets/images/friend.png" alt="Friend-Finder">
               <div class="overlay">
                 <h4>Friend Finder</h4>
