--- a/index.html
+++ b/index.html
@@ -183,9 +183,10 @@
     </div>
 
     <div class="text-center">
-      <a href="mailto:ashlen.bruns@gmail.com"><img class="email" src="assets/images/email-icon.png" alt="email"></a>
-      <a href="https://github.com/ashlenbruns"><img class="github" src="assets/images/GitHub.png" alt="github"></a>
-      <a href="https://www.linkedin.com/in/ashlen-bruns-1581b22b/"><img class="linkedin" src="assets/images/linkedin.png" alt="linkedin"></a>
+      <a href="mailto:ashlen.bruns@gmail.com" target="_blank"><img class="email" src="assets/images/email-icon.png" alt="email"></a>
+      <a href="https://github.com/ashlenbruns" target="_blank"><img class="github" src="assets/images/GitHub.png" alt="github"></a>
+      <a href="https://www.linkedin.com/in/ashlen-bruns-1581b22b/" target="_blank"><img class="linkedin" src="assets/images/linkedin.png" alt="linkedin"></a>
+      <a href="assets/images/A-Bruns-Resume.pdf" target="_blank"><img class="resume" src="assets/images/resume.png" alt="resume"></a>
     </div>
 
     </div>
