--- a/index.html
+++ b/index.html
@@ -57,6 +57,17 @@
       <div class="container">
         <div class="row">
           <div class="thumbnail col-12 col-sm-6 col-md-6 col-lg-4">
+              <div class="hovereffect">
+                <img class="img-fluid" src="assets/images/burger.png" alt="Eat-Da-Burger">
+                <div class="overlay">
+                  <h4>Eat-Da-Burger</h4>
+                  <p class="mx-auto">node | express | express-handlebars | mySQL | Heroku JawsDB | jQuery | Bootstrap</p>
+                  <a class="info" href="https://shielded-scrubland-22809.herokuapp.com/" target="_blank">View Project</a>
+                </div>
+              </div>
+            </div>
+    
+          <div class="thumbnail col-12 col-sm-6 col-md-6 col-lg-4">
             <div class="hovereffect">
               <img class="img-fluid" src="assets/images/proj2.png" alt="Project-2">
               <div class="overlay">
