--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light" id="main-image">
         <div class="col-md-7 p-lg-5 mx-auto my-5">
             <h1 class="focus-in-expand-fwd display-4 font-weight-normal" style="color: aliceblue"><br>Hi there. I'm Ashlen.</h1>
-            <p class="tracking-in-expand-fwd-bottom lead font-weight-normal" style="color: aliceblue">An aspiring full-stack web developer.</p>
+            <p class="tracking-in-expand-fwd-bottom lead font-weight-normal" style="color: aliceblue">A full-stack web developer.</p>
         </div>
     </div>
 
@@ -37,7 +37,7 @@
       <div class="container" id="about-container">
         <h1>About Me</h1>
         <hr>
-        <p>If I could, I would forever be a student.  After 11 years in various customer service positions, I have finally discovered a career path that allows me to be the “forever student” – coding!  Having graduated with a degree in Studio Art and English, I have always gravitated toward combining the technical with the creative.  Coding is the perfect balance of this – the languages are strict, but the applications are endless if you have the imagination to drive them forward.  I am currently enrolled in the University of Minnesota Full-Stack Web Development Boot Camp.  The pace is fast and there is always something new to learn, but I love the challenge and find great satisfaction in creating clean, working code.</p>
+        <p>If I could, I would forever be a student.  After 11 years in various customer service positions, I have finally discovered a career path that allows me to be the “forever student” – coding!  Having graduated with a degree in Studio Art and English, I have always gravitated toward combining the technical with the creative.  Coding is the perfect balance of this – the languages are strict, but the applications are endless if you have the imagination to drive them forward.  I recently graduated from the University of Minnesota Full-Stack Web Development Boot Camp.  The pace was fast and there was always something new to learn, but I loved the challenge and found great satisfaction in writing clean, working code.</p>
         <br>
         <h4>Fun Stuff</h4>
         <p>My husband and I are avid hikers, national park enthusiasts and we love our dogs, Winston and Clementine.</p>
@@ -56,6 +56,28 @@
   
       <div class="container">
         <div class="row">
+          <div class="thumbnail col-12 col-sm-6 col-md-6 col-lg-4">
+            <div class="hovereffect">
+              <img class="img-fluid" src="assets/images/tryathlete.png" alt="TryAthlete">
+              <div class="overlay">
+                <h4>TryAthlete</h4>
+                <p class="mx-auto">react | node | express | MongoDB | mongoose | Heroku mLab | React Bootstrap</p>
+                <a class="info" href="https://try-athlete.herokuapp.com" target="_blank">View Project</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="thumbnail col-12 col-sm-6 col-md-6 col-lg-4">
+            <div class="hovereffect">
+              <img class="img-fluid" src="assets/images/mongo.png" alt="Mongo-Scraper">
+              <div class="overlay">
+                <h4>Mongo New Scraper</h4>
+                <p class="mx-auto">node | express | express-handlebars | MongoDB | mongoose | axios | cheerio | Heroku mLab | Bootstrap</p>
+                <a class="info" href="https://gentle-basin-99151.herokuapp.com/" target="_blank">View Project</a>
+              </div>
+            </div>
+          </div>
+
           <div class="thumbnail col-12 col-sm-6 col-md-6 col-lg-4">
               <div class="hovereffect">
                 <img class="img-fluid" src="assets/images/burger.png" alt="Eat-Da-Burger">
